# experiments

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  versions.json
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0-dev/: 404.html  index.html  sitemap.xml
1.0.0-dev/about/: index.html
1.0.0/about/: index.html
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/about/: index.html
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/about/: index.html
about/: index.html
dev/about/: index.html
docs/: about.md
docs/web/site/: versions.json
docs/web/site/1.0.0/: 404.html  index.html  sitemap.xml
docs/web/site/1.0.0-dev/: 404.html  index.html  sitemap.xml
docs/web/site/1.0.0-dev/about/: index.html
docs/web/site/1.0.0/about/: index.html
docs/web/site/dev/: 404.html  index.html
latest/about/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/1.0.0/: index.html
