[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Dennis Herbrich <dennis.herbrich+codesign@veloxis.de>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
